# RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  RayTrace  RayTracing.vcxproj  RayTracing.vcxproj.filters  camera.cpp  camera.hpp  cube.mtl  grid.cpp  grid.hpp  kernel.cl  kernel1.cl  main.cpp  mtlexporter.ms  objexporter.ms  run_bistro.bat  scene.cpp  scene.hpp  teapot.mtl  vectors.hpp  wall.mtl
Debug/: CL.read.1.tlog  CL.write.1.tlog  RayTracing.ilk  RayTracing.lastbuildstate  RayTracing_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
VS2010/: RayTracing.sln  RayTracing.vcxproj  RayTracing.vcxproj.filters
VS2010/Release/: CL.read.1.tlog  CL.write.1.tlog  RayTracing.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
VS2013/: RayTracing.sln  RayTracing.vcxproj  RayTracing.vcxproj.filters
assets/: ShaderBalls.mtl  download_bistro.bat
assets/ibl/: CGSkies_0036_free.hdr
cmake/: FindGLEW.cmake  FindGLFW3.cmake  FindOpenCL_Light.cmake
lib/: glfw3.lib  glfw3dll.lib
log/: Experimental OpenCL 2.0 CPU Only Platform.txt  NVIDIA CUDA.txt  loop_example.txt
meshes/: CornellBox.mtl  CornellBox_Dragon.mtl  MtlTest.mtl  box.mtl  city.mtl  cube.mtl  dragon.mtl  room.mtl
src/: CMakeLists.txt  aabb.cpp  aabb.hpp  acceleration_structure.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  cl_context.cpp  cl_context.hpp  denoiser.cpp  denoiser.hpp  devcontext.cpp  devcontext.hpp  exception.hpp  grid.cpp  grid.hpp  hdr.cpp  hdr.hpp  hdrloader.cpp  kernel.cl  kernel1.cl  kernel_bvh.cl  kernel_grid.cl  main.cpp  math_functions.hpp  mathlib.cpp  mathlib.hpp  path_trace_estimator.cpp  path_trace_estimator.hpp  path_trace_integrator.cpp  path_trace_integrator.hpp  raytracer.cpp  raytracer.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  shared_structs.hpp  triangle.hpp  (+3 more)
src/Context/: cl_context.cpp  cl_context.hpp
src/GpuWrappers/: cl_context.cpp  cl_context.hpp  gl_graphics_pipeline.cpp  gl_graphics_pipeline.hpp  gl_shader.cpp  gl_shader.hpp
src/IO/: hdr_loader.cpp  image_loader.cpp  image_loader.hpp  inputsystem.cpp  inputsystem.hpp
src/Kernels/: accumulate_direct_samples.cl  aov.cl  bxdf.h  clear_counter.cl  clear_ray_counter.cl  constants.h  denoiser.cl  hit_surface.cl  increment_counter.cl  kernel_bvh.cl  light.h  material.h  miss.cl  raygeneration.cl  reset_radiance.cl  resolve.cl  resolve_radiance.cl  sampling.h  shared_structures.h  spatial_filter.cl  temporal_filter.cl  trace_bvh.cl  utils.h
src/Mathlib/: mathlib.cpp  mathlib.hpp
src/Renderers/: render.cpp  render.hpp
src/Scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp
src/Utils/: camera_controller.cpp  camera_controller.hpp  cl_exception.hpp  framebuffer.cpp  framebuffer.hpp  shared_structs.hpp  viewport.hpp  window.cpp  window.hpp
src/gpu_wrappers/: cl_context.cpp  cl_context.hpp  gl_compute_pipeline.cpp  gl_compute_pipeline.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_graphics_pipeline.cpp  gl_graphics_pipeline.hpp  gl_shader_utils.cpp  gl_shader_utils.hpp
src/integrator/: cl_pt_integrator.cpp  cl_pt_integrator.hpp  gl_pt_integrator.cpp  gl_pt_integrator.hpp  integrator.cpp  integrator.hpp
src/kernels/: bxdf.h  common.h  constants.h  light.h  material.h  sampling.h  shared_structures.h  utils.h
src/kernels/cl/: accumulate_direct_samples.cl  aov.cl  bxdf.h  clear_counter.cl  denoiser.cl  hit_surface.cl  increment_counter.cl  light.h  material.h  miss.cl  raygeneration.cl  reset_radiance.cl  resolve_radiance.cl  sampling.h  shared_structures.h  trace_bvh.cl  utils.h
src/kernels/common/: bxdf.h  constants.h  light.h  material.h  sampling.h  shared_structures.h  utils.h
src/kernels/glsl/: accumulate_direct_samples.comp  clear_counter.comp  copy_image.comp  fullscreen_quad.frag  fullscreen_quad.vert  fullscreen_quad.vs  hit_surface.comp  increment_counter.comp  initialize_hits.comp  miss.comp  raygeneration.comp  reset_radiance.comp  resolve_radiance.comp  trace_bvh.comp  visibility_buffer.frag  visibility_buffer.fs  visibility_buffer.vert  visibility_buffer.vs
src/kernels1/cl/: bxdf.h  clear_counter.cl  sampling.h  trace_bvh.cl
src/loaders/: image_loader.cpp  image_loader.hpp
src/mathlib/: mathlib.cpp  mathlib.hpp
src/scene/: scene.cpp  scene.hpp
src/utils/: camera_controller.cpp  camera_controller.hpp  cl_exception.hpp  framebuffer.cpp  framebuffer.hpp  window.cpp  window.hpp
src/utils1/: blue_noise_sampler.hpp  framebuffer.hpp  window.hpp
textures/: CGSkies_0036_free.hdr
